--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-waypoint": "^9.0.3"
   },
   "devDependencies": {
     "prettier": "2.0.5"
