--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "react-waypoint": "^9.0.3"
   },
   "devDependencies": {
+    "http-proxy-middleware": "^1.0.5",
+    "netlify-lambda": "^2.0.1",
+    "npm-run-all": "^4.1.5",
     "prettier": "2.0.5"
   },
   "keywords": [
@@ -35,13 +38,13 @@
   ],
   "license": "0BSD",
   "scripts": {
-    "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "start": "npm run develop",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "start": "run-p start:**",
+    "start:app": "npm run develop",
+    "start:lambda": "netlify-lambda serve src/functions",
+    "build": "gatsby build && netlify-lambda build src/functions",
+    "build:app": "gatsby build",
+    "build:lambda": "netlify-lambda build src/functions"
   },
   "repository": {
     "type": "git",
