--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,13 @@
   command = "npm run build"
   functions = "functions"
   publish = "public"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
+[[headers]]
+  for = "/*"
+    [headers.values]
+    Access-Control-Allow-Origin = "*"
