--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "axios": "^0.20.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "framer-motion": "^2.3.0",
     "gatsby": "^2.23.12",
     "gatsby-image": "^2.4.9",
@@ -27,7 +29,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
-    "react-waypoint": "^9.0.3"
+    "react-waypoint": "^9.0.3",
+    "serverless-http": "^2.5.0"
   },
   "devDependencies": {
     "http-proxy-middleware": "^1.0.5",
