--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-sitemap": "^2.4.12",
     "gatsby-source-filesystem": "^2.3.14",
     "gatsby-transformer-sharp": "^2.5.7",
+    "mongodb": "^3.6.2",
     "mongoose": "^5.10.4",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
