added login ability

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@reach/dialog": "^0.11.2",
+    "@reach/tabs": "^0.11.2",
+    "@reach/visually-hidden": "^0.11.1",
     "axios": "^0.20.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -25,11 +28,14 @@
     "gatsby-transformer-sharp": "^2.5.7",
     "mongodb": "^3.6.2",
     "mongoose": "^5.10.4",
+    "netlify-identity-widget": "^1.9.1",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "react-netlify-identity": "^0.2.5",
+    "react-netlify-identity-widget": "^0.2.7",
     "react-waypoint": "^9.0.3",
     "serverless-http": "^2.5.0"
   },
