--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,4 @@
 [build]
-  command = "npm run build"
+  command = "npm i --prefix=functions"
   functions = "functions"
   publish = "public"
-
-[[headers]]
-   for = "/*"
-   [headers.values]
-      Access-Control-Allow-Origin = "*"
