--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
-  command = "npm i --prefix=functions"
+  command = " npm run build && npm i --prefix=functions"
   functions = "functions"
   publish = "public"
