fixed bug in layout

--- a/src/data/projectData.json
+++ b/src/data/projectData.json
@@ -1,6 +1,6 @@
 [
   {
-    "projectTitle": "Google Homepage",
+    "projectTitle": "Flooble Homepage",
     "imgUrl": "/googleHomepage.png",
     "videoUrl": "https://www.youtube.com/watch?v=3egZHuLO2g0&feature=youtu.be",
     "skills": "HTML, CSS",
