deleted outter functions folder and updated floogle homepage img

--- a/src/data/projectData.json
+++ b/src/data/projectData.json
@@ -4,7 +4,7 @@
     "imgUrl": "/googleHomepage.png",
     "videoUrl": "https://www.youtube.com/watch?v=3egZHuLO2g0&feature=youtu.be",
     "skills": "HTML, CSS",
-    "description": "This is a great starter project. All that we’ll be using is HTML and CSS to recreate Google’s homepage. It’s a nice simple site with a header, a footer, and a little content in the center. It doesn’t need any JavaScript functionality but you’re welcome to go above and beyond to add it.",
+    "description": "This is a great starter project. All that we’ll be using is HTML and CSS to recreate Floogle's homepage. It’s a nice simple site with a header, a footer, and a little content in the center. It doesn’t need any JavaScript functionality but you’re welcome to go above and beyond to add it.",
     "projectMockupLink": "https://drive.google.com/file/d/1_xM0YAPEZaFJEzepso_XgA9RSGW4iQFg/view?usp=sharing"
   },
   {
