--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@reach/visually-hidden": "^0.11.1",
     "axios": "^0.20.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
     "framer-motion": "^2.3.0",
     "gatsby": "^2.23.12",
     "gatsby-image": "^2.4.9",
@@ -27,16 +26,12 @@
     "gatsby-plugin-sitemap": "^2.4.12",
     "gatsby-source-filesystem": "^2.3.14",
     "gatsby-transformer-sharp": "^2.5.7",
-    "gotrue-js": "^0.9.28",
-    "mongodb": "^3.6.2",
-    "mongoose": "^5.10.4",
-    "netlify-identity-widget": "^1.9.1",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
-    "react-netlify-identity": "^0.2.5",
+    "react-hook-form": "^6.15.1",
     "react-waypoint": "^9.0.3",
     "serverless-http": "^2.5.0",
     "stripe": "^8.114.0"
