--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-burger-menu": "^3.0.3",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^6.15.1",
