--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@reach/dialog": "^0.11.2",
     "@reach/tabs": "^0.11.2",
     "@reach/visually-hidden": "^0.11.1",
+    "@stripe/react-stripe-js": "^1.4.0",
+    "@stripe/stripe-js": "^1.13.1",
     "axios": "^0.20.0",
     "cors": "^2.8.5",
     "framer-motion": "^2.3.0",
