--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "self-taught-dev",
+  "name": "gatsby-starter-default",
   "private": true,
-  "description": "Self Taught Dev Website",
+  "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
-  "author": "Garrett Hughes <mathews.kyle@gmail.com>",
+  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@reach/dialog": "^0.11.2",
     "@reach/tabs": "^0.11.2",
@@ -12,38 +12,38 @@
     "@stripe/stripe-js": "^1.13.1",
     "axios": "^0.20.0",
     "cors": "^2.8.5",
-    "framer-motion": "^2.9.5",
+    "framer-motion": "^2.3.0",
     "gatsby": "^3.1.1",
-    "gatsby-image": "^2.11.0",
-    "gatsby-plugin-google-analytics": "^2.11.0",
-    "gatsby-plugin-google-tagmanager": "^2.11.0",
+    "gatsby-image": "^2.4.9",
+    "gatsby-plugin-google-analytics": "^2.3.13",
+    "gatsby-plugin-google-tagmanager": "^2.3.11",
     "gatsby-plugin-gtag": "^1.0.13",
-    "gatsby-plugin-manifest": "^2.12.1",
+    "gatsby-plugin-manifest": "^2.4.14",
     "gatsby-plugin-netlify-cms": "^5.1.0",
-    "gatsby-plugin-netlify-identity-gotrue": "^0.3.5",
-    "gatsby-plugin-offline": "^3.10.2",
-    "gatsby-plugin-react-helmet": "^3.10.0",
-    "gatsby-plugin-robots-txt": "^1.5.5",
-    "gatsby-plugin-sass": "^2.8.0",
-    "gatsby-plugin-sharp": "^2.14.3",
-    "gatsby-plugin-sitemap": "^2.12.0",
-    "gatsby-source-filesystem": "^2.11.1",
-    "gatsby-transformer-sharp": "^2.12.1",
+    "gatsby-plugin-netlify-identity-gotrue": "^0.3.3",
+    "gatsby-plugin-offline": "^3.2.13",
+    "gatsby-plugin-react-helmet": "^3.3.6",
+    "gatsby-plugin-robots-txt": "^1.5.1",
+    "gatsby-plugin-sass": "^2.3.12",
+    "gatsby-plugin-sharp": "^2.6.14",
+    "gatsby-plugin-sitemap": "^2.4.12",
+    "gatsby-source-filesystem": "^2.3.14",
+    "gatsby-transformer-sharp": "^2.5.7",
     "netlify-cms-app": "^2.14.30",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
-    "react": "^16.14.0",
-    "react-burger-menu": "^3.0.6",
-    "react-dom": "^16.14.0",
+    "react": "^16.12.0",
+    "react-burger-menu": "^3.0.3",
+    "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
-    "react-hook-form": "^6.15.5",
+    "react-hook-form": "^6.15.1",
     "react-waypoint": "^9.0.3",
-    "serverless-http": "^2.7.0",
-    "stripe": "^8.138.0"
+    "serverless-http": "^2.5.0",
+    "stripe": "^8.114.0"
   },
   "devDependencies": {
-    "http-proxy-middleware": "^1.0.6",
-    "netlify-lambda": "^2.0.3",
+    "http-proxy-middleware": "^1.0.5",
+    "netlify-lambda": "^2.0.1",
     "npm-run-all": "^4.1.5",
     "prettier": "2.0.5"
   },
