--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^6.15.1",
+    "react-scroll-parallax": "^2.3.5",
     "react-waypoint": "^9.0.3",
     "serverless-http": "^2.5.0",
     "stripe": "^8.114.0"
