--- a/package.json
+++ b/package.json
@@ -5,49 +5,49 @@
   "version": "0.1.0",
   "author": "Garrett Hughes <selftdev@gmail.com>",
   "dependencies": {
-    "@reach/dialog": "^0.11.2",
-    "@reach/tabs": "^0.11.2",
-    "@reach/visually-hidden": "^0.11.1",
+    "@reach/dialog": "^0.16.2",
+    "@reach/tabs": "^0.16.4",
+    "@reach/visually-hidden": "^0.16.0",
     "@stripe/react-stripe-js": "^1.4.0",
-    "@stripe/stripe-js": "^1.13.1",
+    "@stripe/stripe-js": "^1.25.0",
     "cors": "^2.8.5",
-    "framer-motion": "^2.3.0",
-    "gatsby": "^2.23.12",
-    "gatsby-image": "^2.4.9",
-    "gatsby-plugin-google-analytics": "^2.3.13",
-    "gatsby-plugin-google-tagmanager": "^2.3.11",
+    "framer-motion": "^6.2.8",
+    "gatsby": "^4.10.3",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-google-analytics": "^4.10.0",
+    "gatsby-plugin-google-tagmanager": "^4.10.2",
     "gatsby-plugin-gtag": "^1.0.13",
-    "gatsby-plugin-manifest": "^2.4.14",
-    "gatsby-plugin-netlify-identity-gotrue": "^0.3.3",
-    "gatsby-plugin-offline": "^3.2.13",
-    "gatsby-plugin-react-helmet": "^3.3.6",
+    "gatsby-plugin-manifest": "^4.10.2",
+    "gatsby-plugin-offline": "^5.10.2",
+    "gatsby-plugin-react-helmet": "^5.10.0",
     "gatsby-plugin-robots-txt": "^1.5.1",
-    "gatsby-plugin-sass": "^2.3.12",
-    "gatsby-plugin-sharp": "^2.6.14",
-    "gatsby-plugin-sitemap": "^2.4.12",
-    "gatsby-source-filesystem": "^2.3.14",
-    "gatsby-transformer-sharp": "^2.5.7",
-    "node-sass": "^4.14.1",
+    "gatsby-plugin-sass": "^5.10.2",
+    "gatsby-plugin-sharp": "^4.10.2",
+    "gatsby-plugin-sitemap": "^5.10.2",
+    "gatsby-source-filesystem": "^4.10.1",
+    "gatsby-transformer-sharp": "^4.10.0",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
+    "react": "^17.0.2",
     "react-burger-menu": "^3.0.3",
-    "react-dom": "^16.12.0",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "react-hook-form": "^6.15.1",
-    "react-scroll-parallax": "^2.3.5",
-    "react-waypoint": "^9.0.3",
+    "react-hook-form": "^7.28.1",
+    "react-netlify-identity-gotrue": "^0.3.5",
+    "react-scroll-parallax": "^3.0.5",
+    "react-waypoint": "^10.1.0",
     "serverless-http": "^2.5.0",
-    "stripe": "^8.114.0"
+    "stripe": "^8.210.0"
   },
   "devDependencies": {
-    "http-proxy-middleware": "^1.0.5",
+    "http-proxy-middleware": "^2.0.4",
     "netlify-lambda": "^2.0.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "2.0.5"
+    "prettier": "^2.6.0"
   },
   "keywords": [
     "gatsby"
   ],
+  "type": "module",
   "license": "0BSD",
   "scripts": {
     "develop": "gatsby develop",
