bug: Adjusted redirect in .toml to point to portfolio

--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,7 @@
   publish = "public"
 
 [[redirects]]
-  from = "/cancel"
-  to = "/"
+  from = "/portfolio"
+  to = "https://portfolio.selftaught-dev.com/"
   status = 301
   force = true
